--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/control.js",
   "scripts": {
     "test": "",
-    "lint": "eslint . && prettier --check .",
-    "lint:fix": "eslint --fix . && prettier --write .",
+    "lint": "eslint src && prettier --check src",
+    "lint:fix": "eslint --fix src && prettier --write src",
     "prepare": "husky install",
     "dev": "webpack --node-env development",
     "build": "webpack --node-env production"
