--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^11.1.2",
