--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "sass": "^1.38.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "typescript": "^4.4.4",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^4.0.0"
