--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "lint": "eslint src && prettier --check src",
     "lint:fix": "eslint --fix src && prettier --write src",
+    "ci" : "npm run test && npm run lint:fix",
     "prepare": "husky install",
     "dev": "webpack --node-env development",
     "build": "webpack --node-env production"
@@ -37,21 +38,20 @@
   "homepage": "https://github.com/rodionbgd/game_of_life#readme",
   "devDependencies": {
     "@babel/core": "^7.14.8",
-    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.14.9",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
-    "babel-plugin-rewire": "^1.2.0",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.4.0",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
@@ -60,14 +60,10 @@
     "lint-staged": "^11.1.2",
     "live-server": "^1.2.1",
     "live-server-https": "0.0.2",
-    "load-google-maps-api": "^2.0.2",
     "mini-css-extract-plugin": "^2.2.0",
     "prettier": "2.3.2",
-    "regenerator-runtime": "^0.13.9",
-    "rewire": "^5.0.0",
     "sass": "^1.38.0",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
     "typescript": "^4.4.4",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
