--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:fix": "eslint --fix src && prettier --write src",
     "ci" : "npm run test && npm run lint:fix",
     "prepare": "husky install",
-    "dev": "webpack --node-env development",
+    "dev": "webpack serve --node-env development",
     "build": "webpack --node-env production"
   },
   "husky": {
